Actions
Bug #20797
closedUTC offset seconds part is not checked
Bug #20797:
UTC offset seconds part is not checked
Description
Updated by nobu (Nobuyoshi Nakada) almost 2 years ago
- Description updated (diff)
Updated by nobu (Nobuyoshi Nakada) almost 2 years ago
- Status changed from Open to Closed
Applied in changeset git|9611c619ac60e9aeb0341b0c8cf322a42707ce38.
[Bug #20797] Check seconds in UTC offset as well as minutes
Updated by nobu (Nobuyoshi Nakada) almost 2 years ago
- Subject changed from UTC offset seconds is not checked to UTC offset seconds part is not checked
Updated by nagachika (Tomoyuki Chikanaga) almost 2 years ago
- Backport changed from 3.1: REQUIRED, 3.2: REQUIRED, 3.3: REQUIRED to 3.1: REQUIRED, 3.2: WONTFIX, 3.3: REQUIRED
I think the issue is trivial and the making the validation more restrictive could cause errors in applications.
I decided to WONTFIX on ruby_3_2.
Updated by Eregon (Benoit Daloze) almost 2 years ago
- Related to Feature #18033: Time.new to parse a string added
Updated by k0kubun (Takashi Kokubun) almost 2 years ago
- Backport changed from 3.1: REQUIRED, 3.2: WONTFIX, 3.3: REQUIRED to 3.1: REQUIRED, 3.2: WONTFIX, 3.3: WONTFIX
I feel the same about it. This is gonna be a WONTFIX for ruby_3_3 too.
Actions