[Bug #20797] Check seconds in UTC offset as well as minutes